turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:3: error: overloaded method value setX with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
val posInitX = setX();
               ^Source:4: error: overloaded method value setY with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
val posInitY = setY();
               ^